--- a/src/component/Profile.css
+++ b/src/component/Profile.css
@@ -1,119 +1,109 @@
-.Profile{
+.Profile {
     height: 610px;
+    width: 100%;
     background-color: #fff;
     position: relative;
 }
 
-.midasi2{
+.midasi2 {
     color: black;
     margin: 0;
+    width: 300px;
     position: relative;
     padding-top: 40px;
     padding-left: 120px;
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-.keirekiul{
+.keirekiul {
     line-height: 30px;
     margin-left: 80px;
 }
 
-a{
+a {
     color: black;
 }
 
-.media{
+.media {
     display: flex;
     justify-content: flex-end;
     height: 50px;
     margin-right: 100px;
 }
 
-#media{
+#media {
     margin: 30px;
     font-size: 40px;
-
 }
 
-.My{
+.My {
     margin-top: 50px;
     display: flex;
 }
 
-.Face{
+.Face {
     width: 180px;
     height: 240px;
     margin-left: 120px;
 }
 
-.Proul{
+.Proul {
     margin-left: 60px;
     line-height: 40px;
 }
 
-@media screen and (max-width: 479px){
-.Profile{
-    height: 610px;
-    background-color: #fff;
-    position: relative;
-}
-
-.midasi2{
-    color: black;
-    margin: 0;
-    position: relative;
-    text-align: center;
-    padding: 10px;
-}
-
-ul{
-    list-style: none;
-}
-
-.keirekiul{
-    line-height: 30px;
-    margin-left: 0px;
-    font-size: 15px;
-    padding-left: 20px;
-}
-
-a{
-    color: black;
-}
-
-.media{
-    display: flex;
-    justify-content: flex-end;
-    height: 30px;
-    margin-right: 70px;
-}
-
-#media{
-    margin:0px 30px 0px 30px;
-    font-size: 30px;
-
-}
-
-.My{
-    margin-top: 50px;
-    display: block;
-}
-
-.Face{
-    width: 120px;
-    height: 180px;
-    margin-left: 10px;
-    position: relative;
-    margin-top: -30px;
-    left: 30%;
-}
-
-.Proul{
-    margin-left: 10px;
-    line-height: 40px;
-}
-
+@media screen and (max-width: 479px) {
+    .Profile {
+        height: 750px;
+        background-color: #fff;
+        position: relative;
+    }
+    .midasi2 {
+        color: black;
+        margin: 0;
+        position: relative;
+        text-align: center;
+        padding: 10px;
+    }
+    ul {
+        list-style: none;
+    }
+    .keirekiul {
+        line-height: 30px;
+        margin-left: 0px;
+        font-size: 15px;
+        padding-left: 20px;
+    }
+    a {
+        color: black;
+    }
+    .media {
+        display: flex;
+        justify-content: flex-end;
+        height: 30px;
+        margin-right: 70px;
+    }
+    #media {
+        margin: 0px 30px 0px 30px;
+        font-size: 30px;
+    }
+    .My {
+        margin-top: 50px;
+        display: block;
+    }
+    .Face {
+        width: 120px;
+        height: 180px;
+        margin-left: 10px;
+        position: relative;
+        margin-top: -30px;
+        left: 30%;
+    }
+    .Proul {
+        margin-left: 10px;
+        line-height: 40px;
+    }
 }
